Fixed toolbar alignment

--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -22,6 +22,12 @@
     padding: 0 20px;
   }
 
+  .nav-item {
+    height: 40px;
+    display: flex;
+    align-items: center;
+  }
+
   @media all and (min-width: 768px) {
     mat-toolbar-row {
       max-width: 728px;
